--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -4,8 +4,12 @@ http {
     server {
         listen 80;
 
-        location /todo/ {
-            proxy_pass http:/todo:5000/;
+        location /hello {
+            proxy_pass http://hello:5000/;
+        }
+
+        location /other {
+            proxy_pass http://hello:5000/;
         }
     }
 }
