--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,14 +7,18 @@ services:
     - 8001:8001
     volumes:
     - ./envoy/envoy.yaml:/etc/envoy/envoy.yaml:ro
+    depends_on:
+    - hello
   nginx:
     image: nginx:latest
     ports:
     - 9000:80
     volumes:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  todo:
+    depends_on:
+    - hello
+  hello:
     build:
-      context: todo
-    expose:
-    - 5000
+      context: hello
+    ports:
+    - 5000:5000
