--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   envoy:
-    image: envoyproxy/envoy:latest
+    image: envoyproxy/envoy:${ENVOY_TAG}
     ports:
     - 8000:80
     - 8001:8001
@@ -10,7 +10,7 @@ services:
     depends_on:
     - hello
   nginx:
-    image: nginx:latest
+    image: nginx:${NGINX_TAG}
     ports:
     - 9000:80
     volumes:
